[gd_scene load_steps=4 format=2]

[ext_resource path="res://CharacterEditScreen.gd" type="Script" id=1]
[ext_resource path="res://custom_resources/delete_icon.svg" type="Texture" id=2]
[ext_resource path="res://custom_resources/add_icon.svg" type="Texture" id=3]

[node name="CharacterEditScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0, 0.0627451, 0.12549, 1 )
script = ExtResource( 1 )

[node name="HBC" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="VBC" type="VBoxContainer" parent="HBC"]
margin_right = 160.0
margin_bottom = 634.0

[node name="Header" type="HBoxContainer" parent="HBC/VBC"]
margin_right = 160.0
margin_bottom = 30.0

[node name="AddCharacter" type="Button" parent="HBC/VBC/Header"]
margin_right = 36.0
margin_bottom = 30.0
hint_tooltip = "Add new character."
icon = ExtResource( 3 )

[node name="DeleteCharacter" type="Button" parent="HBC/VBC/Header"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 30.0
hint_tooltip = "Delete selected characters."
icon = ExtResource( 2 )

[node name="Label" type="Label" parent="HBC/VBC/Header"]
margin_left = 80.0
margin_top = 8.0
margin_right = 151.0
margin_bottom = 22.0
text = "Characters:"

[node name="Scroll" type="ScrollContainer" parent="HBC/VBC"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 634.0
rect_min_size = Vector2( 160, 600 )
scroll_horizontal_enabled = false

[node name="CharacterList" type="ItemList" parent="HBC/VBC/Scroll"]
margin_right = 160.0
margin_bottom = 600.0
rect_min_size = Vector2( 160, 600 )
auto_height = true

[node name="VBC2" type="VBoxContainer" parent="HBC"]
margin_left = 164.0
margin_right = 484.0
margin_bottom = 634.0
rect_min_size = Vector2( 320, 624 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBC/VBC2"]
margin_right = 320.0
margin_bottom = 14.0
text = "Character name: "

[node name="CharNameEdit" type="LineEdit" parent="HBC/VBC2"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="HBC/VBC2"]
margin_top = 46.0
margin_right = 320.0
margin_bottom = 77.0
text = "Character pronoun:
(e.g. \"they,\" \"she,\" \"he.\")"

[node name="CharPronounEdit" type="LineEdit" parent="HBC/VBC2"]
margin_top = 81.0
margin_right = 320.0
margin_bottom = 105.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Scroll_Properties" type="ScrollContainer" parent="HBC/VBC2"]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 634.0
rect_min_size = Vector2( 0, 525 )
scroll_horizontal_enabled = false

[node name="VBC" type="VBoxContainer" parent="HBC/VBC2/Scroll_Properties"]
margin_right = 320.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmCharacterDeletion" type="ConfirmationDialog" parent="."]
margin_right = 310.0
margin_bottom = 202.0
dialog_autowrap = true

[node name="Center" type="CenterContainer" parent="ConfirmCharacterDeletion"]
margin_left = 8.0
margin_top = 8.0
margin_right = 302.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntagonistReplacementPicker" type="OptionButton" parent="ConfirmCharacterDeletion/Center"]
margin_left = 132.0
margin_top = 69.0
margin_right = 161.0
margin_bottom = 89.0
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="pressed" from="HBC/VBC/Header/AddCharacter" to="." method="_on_AddCharacter_pressed"]
[connection signal="pressed" from="HBC/VBC/Header/DeleteCharacter" to="." method="_on_DeleteCharacter_pressed"]
[connection signal="item_selected" from="HBC/VBC/Scroll/CharacterList" to="." method="_on_CharacterList_item_selected"]
[connection signal="text_changed" from="HBC/VBC2/CharNameEdit" to="." method="_on_CharNameEdit_text_changed"]
[connection signal="text_changed" from="HBC/VBC2/CharPronounEdit" to="." method="_on_CharPronounEdit_text_changed"]
[connection signal="confirmed" from="ConfirmCharacterDeletion" to="." method="_on_ConfirmCharacterDeletion_confirmed"]
